--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>bank-api</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
