--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,14 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.13</version>
         </dependency>
+
+<!--    migrations-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
     </dependencies>
+
     <build>
         <finalName>bank-api</finalName>
         <plugins>
