feat: реализована аутентификация, написаны тесты

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@ POSTGRES_DB=bank
 POSTGRES_HOST=host
 POSTGRES_PORT=5432
 
-JWT_SECRET_KEY=key
+REDIS_HOST=host
+REDIS_PORT=6379
+
+JWT_ACCESS_SECRET=key
+JWT_REFRESH_SECRET=key
