--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,20 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
     driver-class-name: org.postgresql.Driver
     password: ${POSTGRES_PASSWORD}
     username: ${POSTGRES_USER}
     url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+  cache:
+    type: redis
+
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
 
 server:
   port: 8080
@@ -27,6 +32,10 @@ logging:
       springframework:
         transaction: DEBUG
 
-token:
-  signing:
-    key: ${JWT_SECRET_KEY}
+jwt:
+  expiration:
+    accessInMinutes: 60
+    refreshInMinutes: 10080
+  secret:
+    access: ${JWT_ACCESS_SECRET}
+    refresh: ${JWT_REFRESH_SECRET}
