--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,11 @@ spring:
 server:
   port: 8080
 
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+
 logging:
   level:
     com:
